--- a/_base/requirements.txt
+++ b/_base/requirements.txt
@@ -1,20 +1,27 @@
-celery==5.3.1
-Django==4.1.7
-django-allauth==0.54.0
-django-ckeditor==6.6.1
-django-cloudinary-storage==0.3.0
-django-crispy-forms==2.0
-django-js-asset==2.1.0
-django-non-dark-admin==2.0.2
-django-phonenumber-field==7.1.0
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-google-auth==2.19.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-Pillow==9.5.0
-prompt-toolkit==3.0.39
-psycopg2
-pycodestyle==2.10.0
-redis
-python-dotenv
+amqp==5.2.0
+asgiref==3.8.1
+async-timeout==4.0.3
+billiard==4.2.0
+celery==5.4.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+Django==5.0.3
+django-htmx==1.19.0
+idna==3.8
+kombu==5.4.0
+prompt_toolkit==3.0.47
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+redis==5.0.8
+requests==2.32.3
+six==1.16.0
+sqlparse==0.5.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+vine==5.1.0
+wcwidth==0.2.13
