Refactored deployment script

--- a/ansible/playbooks/update.yaml
+++ b/ansible/playbooks/update.yaml
@@ -5,7 +5,7 @@
     - "../inventory/production/group_vars/all.yml"
   roles:
     - repository
-    - virtualenv
+    # - virtualenv
     - static_files
     - database
     - redis
