--- a/_base/requirements.txt
+++ b/_base/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.2.0
 asgiref==3.8.1
 async-timeout==4.0.3
+boto3
 billiard==4.2.0
 celery==5.4.0
 certifi==2024.8.30
@@ -11,8 +12,10 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.0.3
 django-htmx==1.19.0
+django-storages
 idna==3.8
 kombu==5.4.0
+Pillow
 prompt_toolkit==3.0.47
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
