added thefuzz for word similarity test to requirements.txt

--- a/_base/requirements.txt
+++ b/_base/requirements.txt
@@ -1,8 +1,9 @@
 amqp==5.2.0
 asgiref==3.8.1
 async-timeout==4.0.3
-boto3
 billiard==4.2.0
+boto3==1.35.14
+botocore==1.35.14
 celery==5.4.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -12,19 +13,25 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.0.3
 django-htmx==1.19.0
-django-storages
+django-storages==1.14.4
+gunicorn==23.0.0
 idna==3.8
+jmespath==1.0.1
 kombu==5.4.0
-Pillow
+packaging==24.1
+pillow==10.4.0
 prompt_toolkit==3.0.47
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+RapidFuzz==3.10.0
 redis==5.0.8
 requests==2.32.3
+s3transfer==0.10.2
 six==1.16.0
 sqlparse==0.5.1
+thefuzz==0.22.1
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.2
 vine==5.1.0
 wcwidth==0.2.13
-gunicorn
