--- a/ansible/playbooks/update.yaml
+++ b/ansible/playbooks/update.yaml
@@ -5,10 +5,10 @@
     - "../inventory/production/group_vars/all.yml"
   roles:
     - repository
-    - virtualenv
-    - static_files
-    - database
-    - redis
+    # - virtualenv
+    # - static_files
+    # - database
+    # - redis
     - gunicorn
-    - celery
+    # - celery
     - nginx
