restarted celery in roles

--- a/ansible/playbooks/update.yaml
+++ b/ansible/playbooks/update.yaml
@@ -8,7 +8,7 @@
     # - virtualenv
     # - static_files
     # - database
-    # - redis
+    - redis
     - gunicorn
-    # - celery
+    - celery
     - nginx
