--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,30 +7,45 @@ on:
 jobs:
   configure:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
+      # Cache APT packages
+      - name: Cache APT packages
+        uses: actions/cache@v3
+        with:
+          path: /var/lib/apt/lists
+          key: ${{ runner.os }}-apt-${{ hashFiles('**/ansible/inventory/production/hosts') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
+      # Update package lists
       - name: Update package lists
         run: sudo apt update -y
 
+      # Install software-properties-common
       - name: Install software-properties-common
         run: sudo apt install -y software-properties-common
 
+      # Add Ansible repository
       - name: Add Ansible repository
-        run: |
-          sudo add-apt-repository --yes --update ppa:ansible/ansible  # Official Ansible PPA
+        run: sudo add-apt-repository --yes --update ppa:ansible/ansible  # Official Ansible PPA
 
+      # Install Ansible
       - name: Install Ansible
         run: sudo apt install -y ansible
 
-      - name: Set permissions for secrets file (if needed)
-        # Uncomment and adjust path if you have a secrets file
+      # Set permissions for secrets file (if needed)
+      - name: Set permissions for secrets file
         run: sudo chmod 400 ./ansible/secrets/devops.pem && ls -l ./ansible/secrets/devops.pem
 
+      # Set Ansible configuration path
       - name: Set Ansible configuration path
         env:
           ANSIBLE_CONFIG: ./ansible.cfg # Adjust path if needed
         run: echo $ANSIBLE_CONFIG
 
-      - name: Run Ansible playbook (replace with your actual command)
+      # Run Ansible playbook
+      - name: Run Ansible playbook
         run: ansible-playbook -i ansible/inventory/production/hosts ansible/playbooks/update.yaml
